@@ -1,3 +1,11 @@
+2011-01-17 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCicode.h,
+	  src/SDCCicode.c,
+	  src/SDCCralloc.hpp,
+	  src/z80/ralloc2.cc:
+	  Split validateOpType() into const and non-const version.
+
 2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/SDCCralloc.hpp:
